VolProc: Separated Step from Chain .cc and .h file

--- a/src/VolumeProcessing/CMakeLists.txt
+++ b/src/VolumeProcessing/CMakeLists.txt
@@ -23,6 +23,7 @@ set( OD_MODULE_SOURCES
 	volprocstatscomputer.cc
 	volprocsurfacelimitedfiller.cc
 	volproctrans.cc
+	volprocstep.cc
 	volprocvolreader.cc
 	wellloginterpolator.cc
 )
