VolProc: Made stand-alone ChainOuput object. It does the work required, but the progress indication is not right yet

--- a/src/VolumeProcessing/CMakeLists.txt
+++ b/src/VolumeProcessing/CMakeLists.txt
@@ -16,6 +16,8 @@ set( OD_MODULE_SOURCES
 	volprocattrib.cc
 	volprocbodyfiller.cc
 	volprocchain.cc
+	volprocchainexec.cc
+	volprocchainoutput.cc
 	volprochorinterfiller.cc
 	volproclateralsmoother.cc
 	volprocregionfiller.cc
