od6.0: Enabled Cluster processing OD-59 #resolve
Summary: After the rework of batch processing in od5 cluster processing was disabled. This revision creates the dispatcher classes for cluster processing and re-enables it.

Test Plan:
Tested successfully with the latest version of SLURM:
1. Created energy attribute (od_process_attrib)
2. Created Dip-steering (od_process_volume)

Reviewers: satyaki

Reviewed By: satyaki

Differential Revision: https://phabricator.dgbes.com:8443/D9759

--- a/src/MMProc/CMakeLists.txt
+++ b/src/MMProc/CMakeLists.txt
@@ -8,16 +8,15 @@
 
 add_definitions( -DmNoAutoUiString )
 
-
-
-SET(OD_MODULE_DEPS Network)
-SET(OD_USEQT Core)
+set(OD_MODULE_DEPS Network)
+set(OD_USEQT Core)
 
 SET(OD_MODULE_SOURCES
 	jobdescprov.cc
 	jobiomgr.cc
 	jobrunner.cc
 	initmmproc.cc
+	clusterjobdispatch.cc
 	mmbatchjobdispatch.cc
 	mmproc.cc
 	mmexecproxy.cc
