Removed legacy stuff in CMakeLists.

--- a/plugins/Annotations/CMakeLists.txt
+++ b/plugins/Annotations/CMakeLists.txt
@@ -5,10 +5,10 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET( OD_MODULE_DEPS uiODMain)
-SET( OD_IS_PLUGIN yes)
-SET( OD_USECOIN 1)
-SET( OD_MODULE_SOURCES
+set( OD_MODULE_DEPS uiODMain)
+set( OD_IS_PLUGIN yes)
+set( OD_USECOIN 1)
+set( OD_MODULE_SOURCES
 	annotationspi.cc
 	treeitem.cc
 	uiarrowdlg.cc
@@ -17,6 +17,6 @@ SET( OD_MODULE_SOURCES
 	visarrow.cc
 	viscallout.cc
 	visscalebar.cc )
-SET( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
+set( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
 OD_INIT_MODULE()
 
