--- a/plugins/uiMATLABLink/CMakeLists.txt
+++ b/plugins/uiMATLABLink/CMakeLists.txt
@@ -7,13 +7,13 @@
 
 if ( NOT MATLAB_DIR STREQUAL "" )
 
-    SET(OD_MODULE_DEPS uiODMain MATLABLink )
-    SET(OD_IS_PLUGIN yes)
-    SET(OD_MODULE_SOURCES
+    set(OD_MODULE_DEPS uiODMain MATLABLink )
+    set(OD_IS_PLUGIN yes)
+    set(OD_MODULE_SOURCES
 	uimatlablinkpi.cc
 	uimatlabstep.cc
     )
-    SET( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
+    set( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
     OD_INIT_MODULE()
 
 endif()
