--- a/plugins/uiQtApp/CMakeLists.txt
+++ b/plugins/uiQtApp/CMakeLists.txt
@@ -5,13 +5,13 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS uiODMain)
-SET(OD_IS_PLUGIN yes)
-SET(OD_USEQT Gui)
-SET(OD_MODULE_SOURCES
+set(OD_MODULE_DEPS uiODMain)
+set(OD_IS_PLUGIN yes)
+set(OD_USEQT Gui)
+set(OD_MODULE_SOURCES
 	qtclss.cc
 	uiqtapppi.cc)
-SET( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
-SET( OD_NO_ALO_ENTRY 1 )
+set( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
+set( OD_NO_ALO_ENTRY 1 )
 OD_INIT_MODULE()
 
