--- a/src/uiTools/CMakeLists.txt
+++ b/src/uiTools/CMakeLists.txt
@@ -5,10 +5,8 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-add_definitions( -DmNoAutoUiString )
-
-SET( OD_MODULE_DEPS uiBase Network )
-SET( OD_MODULE_SOURCES
+set( OD_MODULE_DEPS uiBase Network )
+set( OD_MODULE_SOURCES
 	inituitools.cc
 	annotbuffill.cc
 	uiamplspectrum.cc
