--- a/plugins/Bouncy/CMakeLists.txt
+++ b/plugins/Bouncy/CMakeLists.txt
@@ -5,11 +5,11 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET( OD_MODULE_DEPS uiODMain)
-SET( OD_IS_PLUGIN yes)
-SET( OD_MODULE_SOURCES
+set( OD_MODULE_DEPS uiODMain)
+set( OD_IS_PLUGIN yes)
+set( OD_MODULE_SOURCES
 	bouncycontroller.cc
 	bouncypi.cc)
-SET( OD_NO_ALO_ENTRY 1 )
+set( OD_NO_ALO_ENTRY 1 )
 OD_INIT_MODULE()
 
