--- a/plugins/My_Plugin_Name/CMakeLists.txt
+++ b/plugins/My_Plugin_Name/CMakeLists.txt
@@ -5,12 +5,12 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS uiODMain)
-SET(OD_IS_PLUGIN yes)
-SET(OD_MODULE_SOURCES
+set(OD_MODULE_DEPS uiODMain)
+set(OD_IS_PLUGIN yes)
+set(OD_MODULE_SOURCES
 	my_plugin_name_pi.cc
 	my_first_separate_source.cc)
-SET( OD_NO_ALO_ENTRY 1 )
-SET( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
+set( OD_NO_ALO_ENTRY 1 )
+set( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
 OD_INIT_MODULE()
 
