--- a/plugins/uiBouncy/CMakeLists.txt
+++ b/plugins/uiBouncy/CMakeLists.txt
@@ -5,16 +5,16 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS Bouncy uiODMain )
-SET(OD_IS_PLUGIN yes)
-SET(OD_USECOIN 1)
-SET(OD_MODULE_SOURCES
+set(OD_MODULE_DEPS Bouncy uiODMain )
+set(OD_IS_PLUGIN yes)
+set(OD_USECOIN 1)
+set(OD_MODULE_SOURCES
 	uibouncymain.cc
 	uibouncysettingsdlg.cc
 	visbouncydisplay.cc
 	uibouncymgr.cc
 	uibouncypi.cc)
-SET( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
-SET( OD_NO_ALO_ENTRY 1 )
+set( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
+set( OD_NO_ALO_ENTRY 1 )
 OD_INIT_MODULE()
 
