--- a/plugins/uiGrav/CMakeLists.txt
+++ b/plugins/uiGrav/CMakeLists.txt
@@ -5,15 +5,15 @@
 #	RCS :		$Id$
 #_______________________________________________________________________________
 
-SET(OD_MODULE_DEPS uiODMain)
-SET(OD_USECOIN 1)
-SET(OD_IS_PLUGIN yes)
-SET(OD_MODULE_SOURCES
+set(OD_MODULE_DEPS uiODMain)
+set(OD_USECOIN 1)
+set(OD_IS_PLUGIN yes)
+set(OD_MODULE_SOURCES
 	grav.cc
 	gravhorcalc.cc
 	uigravhorcalc.cc
 	uigravpi.cc)
-SET( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
-SET( OD_NO_ALO_ENTRY 1 )
+set( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
+set( OD_NO_ALO_ENTRY 1 )
 OD_INIT_MODULE()
 
