od6.0: Adapted VolProc to allow chunked execution
Summary:
VolProc does everything in-memory before writing. This can require huge
amounts of system memory. If the Chain does not have full-volume steps, then
automatic chunking in inline-chunks is now done.

Test Plan:
Tested the main scenarios with Steering calculation (no chunking required vs multiple chunks) on 8-processor machine.
We now need thorough user testing.

Reviewers: kristofer

Reviewed By: kristofer

Differential Revision: https://phabricator.dgbes.com:8443/D9796

--- a/src/VolumeProcessing/CMakeLists.txt
+++ b/src/VolumeProcessing/CMakeLists.txt
@@ -13,15 +13,18 @@ set( OD_TEST_PROGS volprocchain.cc )
 set( OD_MODULE_SOURCES
 	initvolumeprocessing.cc
 	velocitygridder.cc
-	volprocchain.cc
 	volprocattrib.cc
+	volprocbodyfiller.cc
+	volprocchain.cc
+	volprocchainexec.cc
+	volprocchainoutput.cc
 	volprochorinterfiller.cc
 	volproclateralsmoother.cc
 	volprocsmoother.cc
 	volprocstatscomputer.cc
-	volproctrans.cc
-	volprocbodyfiller.cc
 	volprocsurfacelimitedfiller.cc
+	volproctrans.cc
+	volprocstep.cc
 	volprocvolreader.cc
 	wellloginterpolator.cc
 )
