Made the quick-sort atomic rather than locking.
Summary:
partSort had a local static with locks. Removed those and started
using a global atomic integer.

OD-221

Test Plan: Test program added.

Reviewers: arnaud

Reviewed By: arnaud

Differential Revision: https://phabricator.dgbes.com:8443/D9821

--- a/src/Algo/CMakeLists.txt
+++ b/src/Algo/CMakeLists.txt
@@ -12,6 +12,7 @@ set( OD_TEST_PROGS
 	contcurvinterpol.cc
 	gaussianprobdenfunc.cc
 	simpnumer.cc
+	sorting.cc
 	trigonometry.cc
 	velocitycalc.cc
 )
