Intro Seis::KeyTracker. Vol works, VolPS al,ost, 2D untested

--- a/src/Seis/CMakeLists.txt
+++ b/src/Seis/CMakeLists.txt
@@ -9,7 +9,7 @@
 set(OD_MODULE_DEPS Geometry MMProc )
 
 set ( OD_TEST_PROGS seisbuf.cc )
-# set ( OD_TEST_PROGS seisbuf.cc compare_sgydefs.cc )
+# set ( OD_TEST_PROGS seisbuf.cc seiskeytracker.cc )
 set ( OD_BATCH_TEST_PROGS synthseis.cc )
 
 set(OD_MODULE_SOURCES
@@ -50,6 +50,7 @@ set(OD_MODULE_SOURCES
 	seisioobjinfo.cc
 	seisiosimple.cc
 	seisjobexecprov.cc
+	seiskeytracker.cc
 	seismerge.cc
 	seismulticubeps.cc
 	seisparallelreader.cc
