Added new gui to select RGBT attributes for color blended objects

--- a/src/uiAttributes/CMakeLists.txt
+++ b/src/uiAttributes/CMakeLists.txt
@@ -45,6 +45,7 @@ set(OD_MODULE_SOURCES
 	uipositionattrib.cc
 	uiprestackattrib.cc
 	uireferenceattrib.cc
+	uirgbattrseldlg.cc
 	uisamplevalueattrib.cc
 	uiscalingattrib.cc
 	uisemblanceattrib.cc
