Added new functions ot uiBaseObject
Summary:
We wish to move to a system where a uiBaseObject can have multiple widgets,
which can be layed out on a grid on a parent. This revision prepares that
by enabling these functions on the uiBaseObject.

OD-6

Test Plan:
OpendTect starts. A couple of dialog were tested, and seem to do their work. No
functional changes are expected. getNrWidgets() is make pure & virtual to make
sure that all classes are adapted.

Reviewers: nanne

Reviewed By: nanne

Differential Revision: https://phabricator.dgbes.com:8443/D9871

--- a/src/uiBase/CMakeLists.txt
+++ b/src/uiBase/CMakeLists.txt
@@ -35,6 +35,7 @@ set(OD_MODULE_SOURCES
 	odgraphicsitem.cc
 	qptr.cc
 	uiaction.cc
+	uibaseobject.cc
 	uibutton.cc
 	uibuttongroup.cc
 	uiclipboard.cc
@@ -43,7 +44,6 @@ set(OD_MODULE_SOURCES
 	uicursor.cc
 	uidate.cc
 	uidesktopservices.cc
-
 	uidial.cc
 	uidockwin.cc
 	uieventfilter.cc
