Seis Key Tracking: Separated TrackRecord from KeyTracker

--- a/src/Seis/CMakeLists.txt
+++ b/src/Seis/CMakeLists.txt
@@ -7,8 +7,7 @@
 
 set(OD_MODULE_DEPS Geometry MMProc )
 
-set ( OD_TEST_PROGS seisbuf.cc )
-# set ( OD_TEST_PROGS seisbuf.cc seiskeytracker.cc )
+set ( OD_TEST_PROGS seisbuf.cc seiskeytracker.cc )
 set ( OD_BATCH_TEST_PROGS synthseis.cc )
 
 set(OD_MODULE_SOURCES
