--- a/plugins/OpenCL/CMakeLists.txt
+++ b/plugins/OpenCL/CMakeLists.txt
@@ -4,6 +4,8 @@
 # 	Mar 2016	K. Tingdahl
 #_______________________________________________________________________________
 
+set( OD_IS_PLUGIN TRUE )
+
 set( OD_MODULE_DEPS Basic )
 
 set( OD_TEST_PROGS
@@ -13,6 +15,10 @@ set( OD_NIGHTLY_TEST_PROGS
 )
 
 set( OD_MODULE_SOURCES
+    openclplatform.cc
+    openclpi.cc
 )
+
+OD_SETUP_OPENCL()
 
 OD_INIT_MODULE()
