Pick::Location: Cleaned up the object: * Made data memebers protected * Added many access functions, including 'convenience' * Renamed some of the functions so that - although bizarre - at least they now are called what they do * Put the object in its own files

--- a/src/General/CMakeLists.txt
+++ b/src/General/CMakeLists.txt
@@ -65,6 +65,7 @@ list ( APPEND OD_MODULE_SOURCES
 	mousecursor.cc
 	mouseevent.cc
 	odiconfile.cc
+	picklocation.cc
 	pickretriever.cc
 	pickset.cc
 	posimpexppars.cc
