od6.0: Made single computer remote process execution working
Summary:
see D9928. Same but without interface changes for priority.
Fixes OD-165 and OD-167

Test Plan:
tested the following:
Single processing local-lux64 without MMP configuration file
MMP local-lux64 without configuration file
Single processing local-lux64 with MMP configuration file
Single processing lux64 to remote-lux64
Single processing lux64 to remote-win64

Other configurations will need a release

Reviewers: kristofer

Reviewed By: kristofer

Subscribers: nanne

Differential Revision: https://phabricator.dgbes.com:8443/D9985

--- a/src/uiTools/CMakeLists.txt
+++ b/src/uiTools/CMakeLists.txt
@@ -7,7 +7,7 @@
 
 add_definitions( -DmNoAutoUiString )
 
-SET( OD_MODULE_DEPS uiBase Network )
+SET( OD_MODULE_DEPS uiBase MMProc )
 SET( OD_MODULE_SOURCES
 	inituitools.cc
 	annotbuffill.cc
