Added Network::FileCache for use with WebStreamSource class is incomplete and untested

--- a/src/Network/CMakeLists.txt
+++ b/src/Network/CMakeLists.txt
@@ -17,6 +17,7 @@ set ( OD_MODULE_SOURCES
 	initnetwork.cc
 	issuereporter.cc
 	jobcommunic.cc
+	netfilecache.cc
 	netreqconnection.cc
 	netreqpacket.cc
 	netserver.cc
