[OD]OD-209 [OD]OD-209 CTRL + S in a 2D Viewer does not save the horizon, Part3
Summary: Added a new class: uiODvw2demtreeitem which will be the base classes of some emobject tree item.

Test Plan: Tests with other [OD]OD-209 revision working fine

Reviewers: nanne

Reviewed By: nanne

Differential Revision: https://phabricator.dgbes.com:8443/D10112

--- a/src/uiODMain/CMakeLists.txt
+++ b/src/uiODMain/CMakeLists.txt
@@ -47,6 +47,7 @@ set(OD_MODULE_SOURCES
 	uiodviewer2dposgrp.cc
 	uiodviewer2dposdlg.cc
 	uiodvw2dtreeitem.cc
+	uiodvw2demtreeitem.cc
 	uiodvw2dfaulttreeitem.cc
 	uiodvw2dfaultsstreeitem.cc
 	uiodvw2dfaultss2dtreeitem.cc
