OD-343. Redesigned http network requests from scratch.
Summary: Redesigned http network requests from scratch, with thread safety and usage both with and without a main event loop running.

Test Plan: Tests are added and extended.

Reviewers: bert

Reviewed By: bert

Differential Revision: https://phabricator.dgbes.com:8443/D10139

--- a/src/Network/CMakeLists.txt
+++ b/src/Network/CMakeLists.txt
@@ -13,7 +13,7 @@ set ( OD_USEQT Network)
 set ( OD_MODULE_DEPS General)
 
 set ( QT_MOC_HEADERS
-	qnetworkaccessconn.h
+	i_odhttpconn.h
 	qtcpservercomm.h
 	qtcpsocketcomm.h)
 set ( OD_MODULE_SOURCES
@@ -28,8 +28,8 @@ set ( OD_MODULE_SOURCES
 	netserver.cc
 	netsocket.cc
 	oddlsite.cc
+	odhttp.cc
 	odnetworkaccess.cc
-	odnetworkreply.cc
 	svnaccess.cc
 	systeminfo.cc
 	webstreamsource.cc
