od6.0: Added bulk fault importing
Summary:
As title, the format is based 
XY(inl/crl)Z, fault name, sticknr

Since we do not deal crossing sticks very well, imported faults may not be a good surface

Test Plan: Imported Statoil bulk faults successfully

Reviewers: nanne

Reviewed By: nanne

Differential Revision: https://phabricator.dgbes.com:8443/D10159

--- a/src/uiEarthModel/CMakeLists.txt
+++ b/src/uiEarthModel/CMakeLists.txt
@@ -13,6 +13,7 @@ SET(OD_MODULE_SOURCES
 	uibodyposprovgroup.cc
 	uibodyregiondlg.cc
 	uibodyoperatordlg.cc
+	uibulkfaultimp.cc
 	uibulkhorizonimp.cc
 	uicalcpoly2horvol.cc
 	uichangesurfacedlg.cc
