Pick Sets: Added Loader object, using it in pick part server.

--- a/src/Geometry/CMakeLists.txt
+++ b/src/Geometry/CMakeLists.txt
@@ -32,6 +32,7 @@ set(OD_MODULE_SOURCES
 		parametriccurve.cc
 		parametricsurface.cc
 		picksettr.cc
+		picksetio.cc
 		polygonsurface.cc
 		polygonsurfaceedit.cc
 		polyposprovider.cc
