Added sketch of new pickset manager

--- a/src/Geometry/CMakeLists.txt
+++ b/src/Geometry/CMakeLists.txt
@@ -31,8 +31,9 @@ set(OD_MODULE_SOURCES
 		horizon3dtesselator.cc
 		parametriccurve.cc
 		parametricsurface.cc
-		picksettr.cc
 		picksetio.cc
+		picksetmanager.cc
+		picksettr.cc
 		polygonsurface.cc
 		polygonsurfaceedit.cc
 		polyposprovider.cc
