Added processdlstats.php and added it as task following a call to dlsites.php

--- a/src/Network/backoffice-server/googleapp/app.yaml
+++ b/src/Network/backoffice-server/googleapp/app.yaml
@@ -10,3 +10,5 @@ handlers:
   script: crashreport.php
 - url: /docsites.php
   script: docsites.php
+- url: /processdlstats.php
+  script: processdlstats.php
