Renamed backoffice server to backend server.

--- a/src/Network/CMakeLists.txt
+++ b/src/Network/CMakeLists.txt
@@ -6,8 +6,8 @@
 #_______________________________________________________________________________
 
 if ( UNIX )
-    configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/backoffice-server/upload.sh.in
-		    ${CMAKE_BINARY_DIR}/dtect/backoffice-server-upload.sh @ONLY )
+    configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/backend-server/upload.sh.in
+		    ${CMAKE_BINARY_DIR}/dtect/backend-server-upload.sh @ONLY )
 endif( UNIX )
 
 add_definitions( -DmNoAutoUiString )
