Got 2D Volume Processing working for 'Lateral Smoothing' step [OD-299] Also added a VolProc::Processor to process multiple Geometries.

--- a/src/VolumeProcessing/CMakeLists.txt
+++ b/src/VolumeProcessing/CMakeLists.txt
@@ -18,6 +18,7 @@ set( OD_MODULE_SOURCES
 	volprocchainoutput.cc
 	volprochorinterfiller.cc
 	volproclateralsmoother.cc
+	volprocprocessor.cc
 	volprocregionfiller.cc
 	volprocsmoother.cc
 	volprocstatscomputer.cc
