Made Auto-Save ability possible for all Saveable. The OD::AUTOSAVE() compiles but is not tested

--- a/src/General/CMakeLists.txt
+++ b/src/General/CMakeLists.txt
@@ -79,6 +79,7 @@ list ( APPEND OD_MODULE_SOURCES
 	rangeposprovider.cc
 	raytracerrunner.cc
 	rockphysics.cc
+	saveable.cc
 	stratlevel.cc
 	survgeometrytransl.cc
 	tableascio.cc
