--- a/src/Network/backend-server/googleapp/app.yaml
+++ b/src/Network/backend-server/googleapp/app.yaml
@@ -1,17 +1,14 @@
 runtime: php55
 api_version: 1
-automatic_scaling:
-  min_idle_instances: 0
-  max_idle_instances: 1 
-  min_pending_latency: 500ms
-  max_pending_latency: automatic
 
 handlers:
-- url: /backendscripts/dlsites.php
+- url: /dlsites.php
   script: dlsites.php
-- url: /backendscripts/crashreport.php
+- url: /dlsites.txt
+  script: dlsites.php
+- url: /crashreport.php
   script: crashreport.php
-- url: /backendscripts/docsites.php
+- url: /docsites.php
   script: docsites.php
-- url: /backendscripts/processdlstats.php
+- url: /processdlstats.php
   script: processdlstats.php
