Made CMake happy again

--- a/src/Network/CMakeLists.txt
+++ b/src/Network/CMakeLists.txt
@@ -5,7 +5,7 @@
 #_______________________________________________________________________________
 
 if ( UNIX )
-    configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/backoffice-server/upload.sh.in
+    configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/backend-server/upload.sh.in
 		    ${CMAKE_BINARY_DIR}/dtect/backoffice-server-upload.sh @ONLY )
 endif( UNIX )
 
