Re-worked uiMarkerStyle because it was pretty awful Also renamed uiMarkerStyleDlg to uiVisMarkerStyleDlg as that is what it is.

--- a/src/uiVis/CMakeLists.txt
+++ b/src/uiVis/CMakeLists.txt
@@ -11,7 +11,7 @@ set(OD_MODULE_SOURCES
 	uiattribtransdlg.cc
 	uifltdispoptgrp.cc
 	uigridlinesdlg.cc
-	uimarkerstyledlg.cc
+	uivismarkerstyledlg.cc
 	uimaterialdlg.cc
 	uimpeman.cc
 	uipickpropdlg.cc
