od : Integrate Saveable Manager in 3D scene pickset tree items
Summary: Added a layer of uiODParentTreeItem for all 3d scene tree items where you can set the SaveableManager & that would handle the addition / deletion /hiding etc

Test Plan: Show / hide syncing with the Basemap has been disabled. Will reintroduce it after the PresentationManager

Reviewers: bert

Reviewed By: bert

Subscribers: raman

Differential Revision: https://phabricator.dgbes.com:8443/D10683

--- a/src/uiODMain/CMakeLists.txt
+++ b/src/uiODMain/CMakeLists.txt
@@ -33,6 +33,7 @@ set(OD_MODULE_SOURCES
 	uiodhelpmenumgr.cc
 	uiodmain.cc
 	uiodmenumgr.cc
+	uiodparenttreeitem.cc
 	uiodscenemgr.cc
 	uiodtreeitem.cc
 	uiodemsurftreeitem.cc
