--- a/src/General/CMakeLists.txt
+++ b/src/General/CMakeLists.txt
@@ -66,6 +66,7 @@ list ( APPEND OD_MODULE_SOURCES
 	mousecursor.cc
 	mouseevent.cc
 	odiconfile.cc
+	odpresentationmgr.cc
 	picklocation.cc
 	pickretriever.cc
 	pickset.cc
