Well: On road to make Wells fully Monitorable. See OD-948. Made most subobjects SharedObject's. MarkerSet and LogSet still need to be converted

--- a/src/Well/CMakeLists.txt
+++ b/src/Well/CMakeLists.txt
@@ -11,6 +11,7 @@ set(OD_MODULE_SOURCES
 	wellascio.cc
 	well.cc
 	welld2tmodel.cc
+	welldahobj.cc
 	welldisp.cc
 	wellelasticmodelcomputer.cc
 	wellextractdata.cc
