od : Implementation of factorised version of presentation manager
Summary:
1. ODViewerTypeManager is the base class for managing different types of viewers. For now Scene & Viewer2D are implemented.
2. ObjPresentationInfo a new class is added which would pass all the specialised information for Presentation of different types of objects. It is impelemented only for PickSet for the time being.

Test Plan: Sync is working for picksets between 2D Viewers & 3DScene

Reviewers: bert

Reviewed By: bert

Subscribers: raman

Differential Revision: https://phabricator.dgbes.com:8443/D10715

--- a/src/uiODMain/CMakeLists.txt
+++ b/src/uiODMain/CMakeLists.txt
@@ -16,6 +16,8 @@ set(OD_MODULE_SOURCES
 	inituiodmain.cc
 	measuretoolman.cc
 	odsession.cc
+	odviewer2dpresentationmgr.cc
+	odscenepresentationmgr.cc
 	uiautosaverestore.cc
 	uiodannottreeitem.cc
 	uiodannotarrowtreeitem.cc
