Well: Intro new Well::Manager which is a SaveableManager

--- a/src/Well/CMakeLists.txt
+++ b/src/Well/CMakeLists.txt
@@ -19,6 +19,7 @@ set(OD_MODULE_SOURCES
 	wellioprov.cc
 	welllog.cc
 	wellman.cc
+	wellmanager.cc
 	wellmarker.cc
 	wellposprovider.cc
 	wellreader.cc
