First ProtoType of MMP test ready [OD-864]

--- a/plugins/uiMMPTest/CMakeLists.txt
+++ b/plugins/uiMMPTest/CMakeLists.txt
@@ -14,5 +14,5 @@ set(OD_MODULE_SOURCES
 set(OD_MODULE_BATCHPROGS od_mmptestbatch.cc )
 set(OD_MODULE_PROGS od_MMPTestLaunch.cc )
 
-#set( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
+set( OD_PLUGIN_ALO_EXEC ${OD_MAIN_EXEC} )
 OD_INIT_MODULE()
