od: Home-made version of strlen and strchr, strrchr becomes optional
Summary:
home made version was added to avoid getting too many false positive hits during memory debugging. However the new implementations are much much slower, thus they must become optional. They get conditioned by the CMake flag mMEM_DEBUGGER.
Fixes OD-1028

Test Plan: tested corrected return value from test program

Reviewers: kristofer

Reviewed By: kristofer

Differential Revision: https://phabricator.dgbes.com:8443/D10762

--- a/src/Basic/CMakeLists.txt
+++ b/src/Basic/CMakeLists.txt
@@ -7,6 +7,14 @@
 
 set( OD_USEQT Core )
 
+if ( UNIX )
+    option ( OD_ENABLE_MEMDEBUGGER_CODE
+	    "Enable code that gives less false memory violation positives" OFF )
+    if ( OD_ENABLE_MEMDEBUGGER_CODE )
+	add_definitions("-DmMEM_DEBUGGER")
+    endif()
+endif( UNIX )
+
 if ( OD_ENABLE_BREAKPAD )
     list(APPEND OD_MODULE_INCLUDESYSPATH ${BREAKPAD_DIR}/include/breakpad )
     list(APPEND OD_MODULE_EXTERNAL_LIBS ${OD_BREAKPADLIBS} )
