[od] Use osgGeo::GLInfo to warn for potential graphics card problems (OD-743)
Summary:
Use osgGeo::GLInfo to warn for potential graphics card problems. Show SAME
info only once, or in case of warnings as long as the user likes to see it.
Current checks include missing GL-version (causing Nouveau driver crash)
and Intel cards (various visualization problems). However, the framework
does allow future extensions. Got my inspiration from warning functionality
in odmain.cc.

Test Plan:
Tested on Linux only. Does not yet work for Windows. Made temporary changes
to GLInfo.cpp in order to emulate the various warning situations, since my own
graphics card is fine. Thorough testing of "settings" functionality to shield
same (warning) messages if no longer desired, deleting "dTect.Last GL info"
via Utilities/Settings/Advanced/Personal Settings to restore original
situation. Needs additional testing with real problematic graphics card
configurations. Did not test whether coding for translations is correct.

Reviewers: nanne

Reviewed By: nanne

Differential Revision: https://phabricator.dgbes.com:8443/D10752

--- a/src/uiOSG/CMakeLists.txt
+++ b/src/uiOSG/CMakeLists.txt
@@ -11,6 +11,7 @@ set(OD_USEOSG 1)
 set(OD_MODULE_SOURCES
 		inituiosg.cc
 		keybindings.cc
+		uiglinfo.cc
 		uiosgfont.cc
 		uiprintscenedlg.cc
 		ui3dviewer.cc 
