--- a/src/uiOSG/CMakeLists.txt
+++ b/src/uiOSG/CMakeLists.txt
@@ -13,6 +13,7 @@ set(OD_USEOSG 1)
 SET(OD_MODULE_SOURCES
 		inituiosg.cc
 		keybindings.cc
+		uiglinfo.cc
 		uiosgfont.cc
 		uiprintscenedlg.cc
 		ui3dviewer.cc 
