od : Reshuffling of TreeItems
Summary:
1. Moved uiODTreeItem for uiODMain to uiTools as it contained more general stuffs & less of scene specific stuff.
2. Added new Presentation  Managed Tree item base class & are derived from uiODTreeItem.
3. Previous uiODTreeItem renamed to uiODSceneTreeItem which contains Scene specific stuffs
4. Both parents of scene & 2D Viewer now generalized in uiODPrManagedParentTreeItem, in which we only need to set the PresentationManagedViewer & it should do the rest.

Test Plan: Tested with the common menu items of uiODTreeItem in Viewer2D & Scene, Thinsg working properly. Picksets synchronisation working properly

Reviewers: bert

Reviewed By: bert

Subscribers: raman

Differential Revision: https://phabricator.dgbes.com:8443/D10777

--- a/src/uiODMain/CMakeLists.txt
+++ b/src/uiODMain/CMakeLists.txt
@@ -33,9 +33,9 @@ set(OD_MODULE_SOURCES
 	uiodhelpmenumgr.cc
 	uiodmain.cc
 	uiodmenumgr.cc
-	uiodparenttreeitem.cc
 	uiodscenemgr.cc
-	uiodtreeitem.cc
+	uiodscenetreeitem.cc
+	uiodsceneparenttreeitem.cc
 	uiodemsurftreeitem.cc
 	uiodhortreeitem.cc
 	uiodpicksettreeitem.cc
