Hardened netreqconnection code so all cases of failure are handled.

--- a/src/General/CMakeLists.txt
+++ b/src/General/CMakeLists.txt
@@ -4,13 +4,11 @@
 # 	July 1995	A.H. Bril
 #_______________________________________________________________________________
 
-add_custom_command( OUTPUT od_helpids.h
+add_custom_target( od_helpid ALL 
                 COMMAND ${CMAKE_COMMAND} -E copy_if_different
                     ${CMAKE_SOURCE_DIR}/external/doc_csh/od_helpids_orig.h
-                    ${PROJECT_BINARY_DIR}/include/General/od_helpids.h )
-
-#Force the copy of od_helpids.h before building General
-set ( OD_MODULE_SOURCES od_helpids.h )
+                    ${PROJECT_BINARY_DIR}/include/General/od_helpids.h
+		COMMENT "Checking od_helpids.h" )
 
 set ( OD_MODULE_DEPS Algo )
 if ( NOT DEFINED WIN32 )
